force-app/main/default/objects/ASF_Case_Category_Config__c/ASF_Case_Category_Config__c.object-meta.xml
<CustomObject>
    <description>Case Management Parent Object.</description>
    <label>Case Category Config</label>
    <nameField>
        <displayFormat>CCC-{00000000}</displayFormat>
        <label>Case Category Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Category Configs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>