force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Additional_Email_Templates__c.field-meta.xml
<CustomField>
    <fullName>Additional_Email_Templates__c</fullName>
    <description>Used to store additional email templates required.</description>
    <label>Additional Email Templates</label>
    <type>TextArea</type>
</CustomField>