force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Additional_SMS_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Additional_SMS_Metadata__c</fullName>
    <description>Used to store additional SMS Metadata required.</description>
    <label>Additional SMS Metadata</label>
    <type>TextArea</type>
</CustomField>