force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Advisor_Communication__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Communication__c</fullName>
    <label>Advisor Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DSF</fullName>
            </value>
            <value>
                <fullName>HDFC</fullName>
            </value>
            <value>
                <fullName>DSF &amp; HDFC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>