force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Allowed_Issue_Types__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Issue_Types__c</fullName>
    <description>Used to store allowed Issue Types that can be selected for the particular CCC External ID</description>
    <label>Allowed Issue Types</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>