force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Allowed_Sources__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Sources__c</fullName>
    <label>Allowed Sources</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CEC</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Nodal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>