force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Apex_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Method_Name__c</fullName>
    <label>Apex Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>