force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Applicable_for_OneABC__c.field-meta.xml
<CustomField>
    <fullName>Applicable_for_OneABC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, CTST will be displayed for oneABC Users</description>
    <label>Applicable for OneABC</label>
    <type>Checkbox</type>
</CustomField>