force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABFL</fullName>
            </value>
            <value>
                <fullName>ABHFL</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>ABSLI</fullName>
            </value>
            <value>
                <fullName>ABHI</fullName>
            </value>
            <value>
                <fullName>ABSLAMC</fullName>
            </value>
            <value>
                <fullName>ABSLIG</fullName>
            </value>
            <value>
                <fullName>Wellness</fullName>
            </value>
            <value>
                <fullName>ABML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>