force-app/main/default/objects/ASF_Case_Category_Config__c/fields/CCC_External_Id__c.field-meta.xml
<CustomField>
    <fullName>CCC_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>CCC External Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>