force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Current_TAT__c.field-meta.xml
<CustomField>
    <fullName>Current_TAT__c</fullName>
    <label>Current TAT</label>
    <length>10</length>
    <type>Text</type>
</CustomField>