force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Custom_Segment__c.field-meta.xml
<CustomField>
    <fullName>Custom_Segment__c</fullName>
    <label>Custom Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>