force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Dedupe_Check__c.field-meta.xml
<CustomField>
    <fullName>Dedupe_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dedupe Check</label>
    <type>Checkbox</type>
</CustomField>