force-app/main/default/objects/ASF_Case_Category_Config__c/fields/DMS_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>DMS_Folder_ID__c</fullName>
    <label>DMS Folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>