force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Documentation_Type__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Type__c</fullName>
    <label>Documentation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scanned</fullName>
            </value>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>Scanned/Physical</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>