force-app/main/default/objects/ASF_Case_Category_Config__c/fields/EBOT_Auto_Close__c.field-meta.xml
<CustomField>
    <fullName>EBOT_Auto_Close__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EBOT Auto Close</label>
    <type>Checkbox</type>
</CustomField>