force-app/main/default/objects/ASF_Case_Category_Config__c/fields/EBOT_Template__c.field-meta.xml
<CustomField>
    <fullName>EBOT_Template__c</fullName>
    <label>EBOT Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>