force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Exclude_Dedupe__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Dedupe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Dedupe</label>
    <type>Checkbox</type>
</CustomField>