force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Fins_Non_Fins__c.field-meta.xml
<CustomField>
    <fullName>Fins_Non_Fins__c</fullName>
    <label>Fins/Non-Fins</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Non Financial</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>