force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Holding_Response_Email_Template_2__c.field-meta.xml
<CustomField>
    <fullName>Holding_Response_Email_Template_2__c</fullName>
    <label>Holding Response Email Template 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>