force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Holding_Response_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Holding_Response_Email_Template__c</fullName>
    <description>Email that needs to be sent on Case SLA breach to customer.</description>
    <label>Holding Response Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>