force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Holding_Response_SMS_Template_1__c.field-meta.xml
<CustomField>
    <fullName>Holding_Response_SMS_Template_1__c</fullName>
    <label>Holding Response SMS Template 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>