force-app/main/default/objects/ASF_Case_Category_Config__c/fields/IGMS_Code__c.field-meta.xml
<CustomField>
    <fullName>IGMS_Code__c</fullName>
    <description>ABSLI specific field used in Complaints</description>
    <label>IGMS Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>