force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Is_Bulk_Creatable__c.field-meta.xml
<CustomField>
    <fullName>Is_Bulk_Creatable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Bulk Creatable</label>
    <type>Checkbox</type>
</CustomField>