force-app/main/default/objects/ASF_Case_Category_Config__c/fields/is_FA_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>is_FA_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is FA Mandatory</label>
    <type>Checkbox</type>
</CustomField>