force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Is_FTR_Journey__c.field-meta.xml
<CustomField>
    <fullName>Is_FTR_Journey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is FTR Journey</label>
    <type>Checkbox</type>
</CustomField>