force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Is_Prospect_Related__c.field-meta.xml
<CustomField>
    <fullName>Is_Prospect_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set to true, allow in search for Prospect.</description>
    <label>Is Prospect Related</label>
    <type>Checkbox</type>
</CustomField>