force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Is_Transaction_Related__c.field-meta.xml
<CustomField>
    <fullName>Is_Transaction_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for Payment LOB.
TRUE - Consider Customer Id + Case Type + Case Sub Type + Case Category + Transaction ID + Status to do dedupe
FALSE - Consider Customer Id + Case Type + Case Sub Type + Case Category + Status to do dedupe</description>
    <label>Is Transaction Related</label>
    <type>Checkbox</type>
</CustomField>