force-app/main/default/objects/ASF_Case_Category_Config__c/fields/isStageSkip__c.field-meta.xml
<CustomField>
    <fullName>isStageSkip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isStageStopSkip</label>
    <type>Checkbox</type>
</CustomField>