force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Litmus_Project__c.field-meta.xml
<CustomField>
    <fullName>Litmus_Project__c</fullName>
    <label>Litmus Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>