force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Litmus_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Litmus_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Litmus Trigger</label>
    <type>Checkbox</type>
</CustomField>