force-app/main/default/objects/ASF_Case_Category_Config__c/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <label>LOB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wealth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>