force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Multiple_Child_Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Child_Component_Name__c</fullName>
    <description>The component name that needs to be displayed when Multiple Child Records need to be associated with the case</description>
    <label>Multiple Child Component Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>