force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Multiple_Child_Details__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Child_Details__c</fullName>
    <label>Multiple Child Details</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Loans</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>