force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Nature__c.field-meta.xml
<CustomField>
    <fullName>Nature__c</fullName>
    <label>Nature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>