force-app/main/default/objects/ASF_Case_Category_Config__c/fields/No_Owner_Change_on_Recat__c.field-meta.xml
<CustomField>
    <fullName>No_Owner_Change_on_Recat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Owner Change on Recat</label>
    <type>Checkbox</type>
</CustomField>