force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Only_CRN_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Only_CRN_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Only CRN Mandatory</label>
    <type>Checkbox</type>
</CustomField>