force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Overall_Case_Closure_SLA__c.field-meta.xml
<CustomField>
    <fullName>Overall_Case_Closure_SLA__c</fullName>
    <label>Overall Case Closure SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>