force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Override_Rejected_communication__c.field-meta.xml
<CustomField>
    <fullName>Override_Rejected_communication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Rejected communication</label>
    <type>Checkbox</type>
</CustomField>