force-app/main/default/objects/ASF_Case_Category_Config__c/fields/PPC_Case_Sub_TYPE__c.field-meta.xml
<CustomField>
    <fullName>PPC_Case_Sub_TYPE__c</fullName>
    <description>Used in ABSLI</description>
    <label>PPC Case Sub TYPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>