force-app/main/default/objects/ASF_Case_Category_Config__c/fields/PPC_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>PPC_Change_Type__c</fullName>
    <description>Used in ABSLI</description>
    <label>PPC Change Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>