force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <label>Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>