force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Quick_Kill__c.field-meta.xml
<CustomField>
    <fullName>Quick_Kill__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Quick Kill is only enabled for System admins and AMC Admins</description>
    <label>Quick Kill ?</label>
    <type>Checkbox</type>
</CustomField>