force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Rejected_Case_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Case_Email_Template__c</fullName>
    <label>Rejected Case Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>