force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Reopen_Days__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Days__c</fullName>
    <label>Reopen Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>