force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Reopen_Style__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Style__c</fullName>
    <description>Type of Reopen
1. Case Reopens. when Reopened , Case Lands at First Stage , Medium Priority
2. Case Reopens. when Reopened , Case Lands at Reopened Stage, but can move to other Stages also
3. Case Reopens. when Reopened , Case Lands at Reopened Stage, but CANNOT move to any other Stages . Remains in Reopened and Goes to Closed Directly</description>
    <label>Reopen Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reopen Stage With Movement</fullName>
            </value>
            <value>
                <fullName>Reopen Stage No Movement</fullName>
            </value>
            <value>
                <fullName>Move To First Stage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>