force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Reopened_Case_Closure_SLA__c.field-meta.xml
<CustomField>
    <fullName>Reopened_Case_Closure_SLA__c</fullName>
    <label>Reopened Case Closure SLA</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>