force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Run_Assignment_Rule_on_Bulk_Create__c.field-meta.xml
<CustomField>
    <fullName>Run_Assignment_Rule_on_Bulk_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Runs assignment rule when case is created via bulk screen</description>
    <label>Run Assignment Rule on Bulk Create?</label>
    <type>Checkbox</type>
</CustomField>