force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Save_to_Next_Stage__c.field-meta.xml
<CustomField>
    <fullName>Save_to_Next_Stage__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Created for ABHI BU to bypass the move to next stage logic on Save .</description>
    <label>Save to Next Stage?</label>
    <type>Checkbox</type>
</CustomField>