force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Send_Holding_Response__c.field-meta.xml
<CustomField>
    <fullName>Send_Holding_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Switch to decide if the holding response needs to be sent on CTST record.</description>
    <label>Send Holding Response</label>
    <type>Checkbox</type>
</CustomField>