force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Send_open_stage_communications__c.field-meta.xml
<CustomField>
    <fullName>Send_open_stage_communications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send open stage communications</label>
    <type>Checkbox</type>
</CustomField>