force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Send_Recategorisation_Communication__c.field-meta.xml
<CustomField>
    <fullName>Send_Recategorisation_Communication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Recategorisation Communication</label>
    <type>Checkbox</type>
</CustomField>