force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Send_SMS__c.field-meta.xml
<CustomField>
    <fullName>Send_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send SMS</label>
    <type>Checkbox</type>
</CustomField>