force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Send_Whatsapp__c.field-meta.xml
<CustomField>
    <fullName>Send_Whatsapp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Whatsapp</label>
    <type>Checkbox</type>
</CustomField>