force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Show_FTR_Flag_on_Creation__c.field-meta.xml
<CustomField>
    <fullName>Show_FTR_Flag_on_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show FTR Flag on Creation</label>
    <type>Checkbox</type>
</CustomField>