force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Show_On_ONEABC_Customer_Only__c.field-meta.xml
<CustomField>
    <fullName>Show_On_ONEABC_Customer_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show On ONEABC Customer Only</label>
    <type>Checkbox</type>
</CustomField>