force-app/main/default/objects/ASF_Case_Category_Config__c/fields/SMS_Templates__c.field-meta.xml
<CustomField>
    <fullName>SMS_Templates__c</fullName>
    <label>SMS Templates</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>