force-app/main/default/objects/ASF_Case_Category_Config__c/fields/SR_Classification_filter_value__c.field-meta.xml
<CustomField>
    <fullName>SR_Classification_filter_value__c</fullName>
    <label>SR Classification filter value</label>
    <type>TextArea</type>
</CustomField>