force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>