force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Sub_Type_Synonyms__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type_Synonyms__c</fullName>
    <label>Sub Type Synonyms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>