force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Technical_Source__c.field-meta.xml
<CustomField>
    <fullName>Technical_Source__c</fullName>
    <label>Technical Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LWC</fullName>
                <default>true</default>
                <label>LWC</label>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>