force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Tool_Tip__c.field-meta.xml
<CustomField>
    <fullName>Tool_Tip__c</fullName>
    <label>Tool Tip</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>