force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Type_SubType_LOB__c.field-meta.xml
<CustomField>
    <fullName>Type_SubType_LOB__c</fullName>
    <formula>Type__c + &apos; / &apos;+ Sub_Type__c + IF( NOT(ISBLANK(LOB__c)),&apos; / &apos; +  LOB__c,&apos;&apos;)</formula>
    <label>Type SubType LOB</label>
    <type>Text</type>
</CustomField>