force-app/main/default/objects/ASF_Case_Category_Config__c/fields/UI_Cards__c.field-meta.xml
<CustomField>
    <fullName>UI_Cards__c</fullName>
    <label>UI Cards</label>
    <length>255</length>
    <type>Text</type>
</CustomField>