force-app/main/default/objects/ASF_Case_Category_Config__c/fields/Validation_method_during_creation__c.field-meta.xml
<CustomField>
    <fullName>Validation_method_during_creation__c</fullName>
    <inlineHelpText>Mention the method name from asf_CreateCaseValidations LWC which is to be evaluated during case creation using this config. New methods can be added in the mentioned LWC.</inlineHelpText>
    <label>Validation method during creation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>