force-app/main/default/objects/ASF_Case_Category_Config__c/listViews/ABFLall.listView-meta.xml
<ListView>
    <fullName>ABFLall</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>CCC_External_Id__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>ABFL ALL</label>
</ListView>