force-app/main/default/objects/ASF_Case_Category_Config__c/listViews/ABHFL_Complaints.listView-meta.xml
<ListView>
    <fullName>ABHFL_Complaints</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Overall_Case_Closure_SLA__c</columns>
    <columns>CCC_External_Id__c</columns>
    <columns>is_FA_Mandatory__c</columns>
    <columns>Is_FTR_Journey__c</columns>
    <columns>LOB__c</columns>
    <columns>Nature__c</columns>
    <columns>Technical_Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>ABHFL</value>
    </filters>
    <filters>
        <field>Nature__c</field>
        <operation>equals</operation>
        <value>complaint</value>
    </filters>
    <label>ABHFL Complaints</label>
</ListView>